# avalanchego

./: .avalanche-golangci.yml  .bazelignore  .bazelrc  .codecov.yml  .dockerignore  .editorconfig  .envrc  .gitignore  .gitmodules  .golangci-warn-assert.yml  .golangci.yml  .goreleaser.yml  .gosec-golangci.yml  .linkspector.yml  .travis.yml  .yamlfmt  .yamllint.yml  AGENTS.md  BAZEL.md  BAZEL_MIGRATION_STATUS.md  BUILD.bazel  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  DEVNETS.md  Dockerfile  Dockerfile.protoc  Firewood_CI-Migration_Changelog.md  LICENSE  LICENSE.header  LICENSE.header.c4t  LICENSE.md  METRICS.md  MODULE.bazel  PROPERTY.md  README.docker.md  README.md  (+51 more)
api/: BUILD.bazel  Dockerfile.buf  README.md  buf.gen.yaml  buf.yaml  camino.go  common_args_responses.go  middleware_handler.go  router.go  router_test.go  server.go  server_test.go  traced_handler.go
app/: BUILD.bazel  app.go  keys.go  main.go  params.go
avalanche-rs/: .gitignore  Cargo.toml  README.md
benchmark/: Cargo.toml  Grafana-dashboard.json  README.md  cloud-config.txt  setup.sh
cache/: BUILD.bazel  cache.go  empty.go  empty_cache.go  fifo_cache.go  fifo_cache_test.go  lru_cache.go  lru_cache_benchmark_test.go  lru_cache_closable.go  lru_cache_closable_test.go  lru_cache_test.go  lru_sized_cache.go  lru_sized_cache_test.go  mock_cacher.go  test_cache.go  test_cacher.go  unique_cache.go  unique_cache_test.go
cargo-update-all-revs/: Cargo.toml
chains/: BUILD.bazel  awaiter.go  awaiter_test.go  factory.go  linearizable_vm.go  manager.go  manager_test.go  mock_manager.go  mocks_generate_test.go  notifier.go  notifier_test.go  registrant.go  subnet.go  subnet_test.go  subnets.go  subnets_test.go  test_manager.go
codec/: BUILD.bazel  camino_codec.go  camino_registry.go  camino_test_codec.go  codec.go  general_codec.go  manager.go  mock_manager.go  mocks_generate_test.go  registry.go  test_codec.go
config/: BUILD.bazel  camino.go  config.go  config.md  config_test.go  flags.go  keys.go  pflags.go  viper.go
database/: BUILD.bazel  batch.go  batch_context.go  benchmark_database.go  camino_helpers.go  common.go  database.go  database_context.go  errors.go  helpers.go  helpers_test.go  iterator.go  mock_batch.go  mock_database.go  mock_iterator.go  mocks_generate_test.go  test_database.go
ffi/: .gitignore  .golangci.yaml  Cargo.toml  README.md  build.rs  cbindgen.toml  firewood.go  firewood.h  firewood_test.go  flake.nix  generate_cgo.go  go.mod  iterator.go  keepalive.go  kvbackend.go  maybe.go  memory.go  metrics.go  metrics_test.go  proofs.go  proofs_test.go  proposal.go  reconstructed.go  reconstructed_test.go  revision.go  test-build-equivalency.sh
firewood/: .gitattributes  .gitignore  .markdownlint.json  AGENTS.md  BUILD.bazel  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE.md  METRICS.md  README.docker.md  README.md  RELEASE.md  Taskfile.yml  cliff.toml  clippy.toml  firewood.go  firewood_test.go  justfile
firewood-connection/: Cargo.toml  README.md
firewood-macros/: Cargo.toml  README.md
firewood-shale/: Cargo.toml
fwdctl/: Cargo.toml  README.md  build.rs
genesis/: BUILD.bazel  README.md  aliases.go  beacons.go  beacons_test.go  bootstrappers.go  bootstrappers.json  bootstrappers_test.go  camino.go  camino_config.go  camino_config_test.go  camino_genesis.go  camino_genesis_test.go  camino_unparsed_config.go  camino_unparsed_config_test.go  checkpoints.go  checkpoints.json  config.go  config_test.go  devnet76-genesis.json  devnet76-upgrade.json  genesis.go  genesis_camino.go  genesis_camino.json  genesis_columbus.go  genesis_columbus.json  genesis_fuji.go  genesis_fuji.json  genesis_kopernikus.go  genesis_kopernikus.json  genesis_local.go  genesis_local.json  genesis_mainnet.go  genesis_mainnet.json  genesis_manhattan.go  genesis_test.go  genesis_test.json  genesis_test_invalid_allocations.json  local_genesis.go  mainnet_genesis.go  (+8 more)
growth-ring/: Cargo.toml  README.md  README.rst
grpc-testtool/: Cargo.toml  README.md  build.rs
ids/: BUILD.bazel  aliases.go  aliases_test.go  bag.go  bag_benchmark_test.go  bag_test.go  big_bit_set.go  big_bit_set_test.go  bit_set.go  bit_set_test.go  bits.go  bits_test.go  camino_id.go  format.go  format_test.go  id.go  id_test.go  marshalling_test.go  node_id.go  node_id_bag.go  node_id_generic.go  node_id_set.go  node_id_test.go  node_weight.go  private_key.go  private_key_test.go  queue.go  queue_test.go  request_id.go  set.go  set2.go  set_benchmark_test.go  set_test.go  short.go  short_bag.go  short_node_id.go  short_node_id_test.go  short_set.go  short_set_test.go  short_test.go  (+5 more)
indexer/: BUILD.bazel  client.go  client_interface_test.go  client_test.go  codec.go  container.go  index.go  index_client.go  index_client_test.go  index_test.go  indexer.go  indexer_client.go  indexer_client_test.go  indexer_test.go  noop_indexer.go  service.go  service.md  stand_alone_index.go  stand_alone_index_test.go  vm_backed_index.go  vm_backed_index_test.go
libaio/: Cargo.toml  README.md  build.rs
libaio-futures/: Cargo.toml
main/: BUILD.bazel  binary_manager.go  constants.go  default.pgo  keys.go  main.go  migration.go  node_manager.go  params.go  params_test.go  run.go  storage_common.go  storage_unix.go  storage_windows.go
message/: BUILD.bazel  builder.go  builder_test.go  codec.go  codec_test.go  compression_benchmark_test.go  creator.go  fields.go  inbound_msg_builder.go  inbound_msg_builder_pb_test.go  inbound_msg_builder_proto.go  inbound_msg_builder_proto_test.go  inbound_msg_builder_test.go  internal_msg_builder.go  message.go  messages.go  messages_benchmark_test.go  messages_test.go  mock_message.go  mock_outbound_message_builder.go  mocks_generate_test.go  msg_creator.go  ops.go  outbound_msg_builder.go  outbound_msg_builder_pb.go  outbound_msg_builder_proto.go  outbound_msg_builder_proto_test.go  outbound_msg_builder_test.go  simplex_outbound_msg_builder.go  test_message.go
nat/: BUILD.bazel  mapper.go  nat.go  nat_test.go  no_router.go  pmp.go  public_ip.go  router.go  upnp.go
(+13980 files in other folders)
