load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_test")

exports_files(["BUILD.bazel"])

# gazelle:prefix github.com/ava-labs/avalanchego
# gazelle:exclude tools
# gazelle:exclude .direnv
# gazelle:proto disable_global
# gazelle:map_kind go_test go_test //.bazel:defs.bzl

gazelle(
    name = "gazelle",
    command = "fix",
)

gazelle_test(
    name = "gazelle_test",
    workspace = "//:BUILD.bazel",
)
