load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_test")

exports_files(["BUILD.bazel"])

# gazelle:prefix github.com/ava-labs/avalanchego
# gazelle:exclude tools
# gazelle:exclude .direnv
# gazelle:exclude .bazel/patches/build_files
# gazelle:resolve go github.com/ava-labs/firewood-go/ffi //firewood/ffi:ffi_merkledb
# gazelle:resolve go github.com/ava-labs/firewood-go-ethhash/ffi //firewood/ffi:ffi
# gazelle:proto disable_global
# gazelle:map_kind go_test go_test //.bazel:defs.bzl

gazelle(
    name = "gazelle",
    command = "fix",
)

gazelle_test(
    name = "gazelle_test",
    size = "small",
    workspace = "//:BUILD.bazel",
)
