[workspace]
members = [
  "benchmark",
  "ffi",
  "firewood-macros",
  "firewood",
  "fwdctl",
  "storage",
  "triehash",
]
resolver = "2"

[workspace.package]
version = "0.0.8"
edition = "2024"
license-file = "LICENSE.md"
homepage = "https://avalabs.org"
repository = "https://github.com/ava-labs/firewood"
readme = "README.md"
rust-version = "1.85.0"

[profile.release]
debug = true

[profile.maxperf]
panic = "abort"
codegen-units = 1
lto = "fat"
debug = false
inherits = "release"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "warn"
indexing_slicing = "warn"
explicit_deref_methods = "warn"
missing_const_for_fn = "warn"
arithmetic_side_effects = "warn"
# lower the priority of pedantic to allow overriding the lints it includes
pedantic = { level = "warn", priority = -1 }
# These lints are from pedantic but allowed. They are a bit too pedantic and
# encourage making backwards incompatible changes.
needless_pass_by_value = "allow"
unused_async = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"
# Ignore interger casts. This is to avoid unnecessary `try_into` calls for usize
# to u64 and vice versa and should be re-enabled if/when clippy has a separate
# lint for usize vs non-usize truncation.
cast_possible_truncation = "allow"

[workspace.dependencies]
# workspace local packages
firewood = { path = "firewood", version = "0.0.8" }
firewood-macros = { path = "firewood-macros", version = "0.0.8" }
firewood-storage = { path = "storage", version = "0.0.8" }
firewood-ffi = { path = "ffi", version = "0.0.8" }
firewood-triehash = { path = "triehash", version = "0.0.8" }

# common dependencies
metrics = "0.24.2"
metrics-util = "0.20.0"
sha2 = "0.10.9"
tokio = "1.46.0"
clap = { version = "4.5.40", features = ["derive"] }
fastrace = "0.7.14"
bincode = "1.3.3"
serde = "1.0.219"
thiserror = "2.0.12"
coarsetime = "0.1.36"
integer-encoding = "4.0.2"
env_logger = "0.11.8"
smallvec = "1.15.1"

# common dev dependencies
rand = "0.9.1"
criterion = "0.6.0"
pprof = "0.15.0"
tempfile = "3.20.0"
ethereum-types = "0.15.1"
hex-literal = "1.0.0"
