module(
    name = "avalanchego",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.56.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.45.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "protobuf", version = "29.3", repo_name = "com_google_protobuf")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# Go SDK - version must match go.mod and nix/go/default.nix
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.12")

# Go dependencies from go.work (aggregates all go.mod files)
go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")

# Patches for external dependencies that need custom BUILD files
# blst: Disable gazelle and provide custom BUILD files for CGO
go_deps.module_override(
    patch_strip = 1,
    patches = ["//.bazel/patches:com_github_supranational_blst.patch"],
    path = "github.com/supranational/blst",
)
go_deps.gazelle_override(
    build_file_generation = "off",
    path = "github.com/supranational/blst",
)

# firewood: Disable gazelle and provide custom BUILD file for CGO FFI
go_deps.module_override(
    patch_strip = 1,
    patches = ["//.bazel/patches:com_github_ava_labs_firewood_go_ethhash_ffi.patch"],
    path = "github.com/ava-labs/firewood-go-ethhash/ffi",
)
go_deps.gazelle_override(
    build_file_generation = "off",
    path = "github.com/ava-labs/firewood-go-ethhash/ffi",
)

# gnark-crypto: Use purego tag to avoid assembly includes across packages
# (Go assembly #include with relative paths breaks in Bazel sandboxes)
# TODO: Figure out how to enable assembly properly - purego disables optimizations
#       Need to either patch gnark-crypto BUILD files or configure asm include paths
go_deps.gazelle_override(
    directives = [
        "gazelle:build_tags purego",
    ],
    path = "github.com/consensys/gnark-crypto",
)

# libevm: patch secp256k1 CGO package and tell gazelle to skip it
go_deps.module_override(
    patches = [
        "//.bazel/patches:com_github_ava_labs_libevm_libsecp256k1.patch",
        "//.bazel/patches:com_github_ava_labs_libevm_secp256k1.patch",
    ],
    path = "github.com/ava-labs/libevm",
)
go_deps.gazelle_override(
    directives = [
        "gazelle:exclude crypto/secp256k1/**",
    ],
    path = "github.com/ava-labs/libevm",
)

# NOTE: Workspace modules (avalanchego, graft/*) are included in use_repo
# because `bazel mod tidy` requires them, even though they're built locally.
use_repo(
    go_deps,
    "com_connectrpc_connect",
    "com_connectrpc_grpcreflect",
    "com_github_antithesishq_antithesis_sdk_go",
    "com_github_ava_labs_avalanchego",
    "com_github_ava_labs_avalanchego_graft_coreth",
    "com_github_ava_labs_avalanchego_graft_evm",
    "com_github_ava_labs_avalanchego_graft_subnet_evm",
    "com_github_ava_labs_firewood_go_ethhash_ffi",
    "com_github_ava_labs_libevm",
    "com_github_ava_labs_simplex",
    "com_github_btcsuite_btcd_btcutil",
    "com_github_cespare_xxhash_v2",
    "com_github_cockroachdb_pebble",
    "com_github_compose_spec_compose_go",
    "com_github_datadog_zstd",
    "com_github_davecgh_go_spew",
    "com_github_deckarep_golang_set_v2",
    "com_github_decred_dcrd_dcrec_secp256k1_v4",
    "com_github_fjl_gencodec",
    "com_github_go_cmd_cmd",
    "com_github_google_btree",
    "com_github_google_go_cmp",
    "com_github_google_renameio_v2",
    "com_github_google_uuid",
    "com_github_gorilla_mux",
    "com_github_gorilla_rpc",
    "com_github_gorilla_websocket",
    "com_github_grpc_ecosystem_go_grpc_prometheus",
    "com_github_hashicorp_go_bexpr",
    "com_github_hashicorp_golang_lru",
    "com_github_holiman_billy",
    "com_github_holiman_bloomfilter_v2",
    "com_github_holiman_uint256",
    "com_github_huin_goupnp",
    "com_github_jackpal_gateway",
    "com_github_jackpal_go_nat_pmp",
    "com_github_leanovate_gopter",
    "com_github_mattn_go_colorable",
    "com_github_mattn_go_isatty",
    "com_github_mitchellh_mapstructure",
    "com_github_mr_tron_base58",
    "com_github_nbutton23_zxcvbn_go",
    "com_github_onsi_ginkgo_v2",
    "com_github_pires_go_proxyproto",
    "com_github_prometheus_client_golang",
    "com_github_prometheus_client_model",
    "com_github_prometheus_common",
    "com_github_rs_cors",
    "com_github_shirou_gopsutil",
    "com_github_spf13_cast",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_github_spf13_viper",
    "com_github_stephenbuttolph_canoto",
    "com_github_stretchr_testify",
    "com_github_supranational_blst",
    "com_github_syndtr_goleveldb",
    "com_github_thepudds_fzgen",
    "com_github_tyler_smith_go_bip39",
    "com_github_urfave_cli_v2",
    "com_github_victoriametrics_fastcache",
    "in_gopkg_natefinch_lumberjack_v2",
    "in_gopkg_yaml_v3",
    "io_k8s_api",
    "io_k8s_apimachinery",
    "io_k8s_client_go",
    "io_k8s_utils",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracehttp",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_trace",
    "org_golang_google_genproto",
    "org_golang_google_genproto_googleapis_rpc",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_crypto",
    "org_golang_x_exp",
    "org_golang_x_net",
    "org_golang_x_sync",
    "org_golang_x_term",
    "org_golang_x_time",
    "org_golang_x_tools",
    "org_gonum_v1_gonum",
    "org_uber_go_goleak",
    "org_uber_go_mock",
    "org_uber_go_zap",
)
