[workspace]
resolver = "2"
members = [
    "crates/avalanche-ids",
    "crates/avalanche-codec",
    "crates/avalanche-utils",
    "crates/avalanche-proto",
    "crates/avalanche-net",
    "crates/avalanche-db",
    "crates/avalanche-snow",
    "crates/avalanche-vm",
    "crates/avalanche-trie",
    "crates/platformvm",
    "crates/avalanche-api",
    "crates/avm",
    "crates/avalanche-node",
    "crates/avalanche-crypto",
    "crates/evm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/ava-labs/avalanche-rs"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
avalanche-ids = { path = "crates/avalanche-ids" }
avalanche-codec = { path = "crates/avalanche-codec" }
avalanche-utils = { path = "crates/avalanche-utils" }
avalanche-proto = { path = "crates/avalanche-proto" }
avalanche-net = { path = "crates/avalanche-net" }
avalanche-db = { path = "crates/avalanche-db" }
avalanche-snow = { path = "crates/avalanche-snow" }
avalanche-vm = { path = "crates/avalanche-vm" }
platformvm = { path = "crates/platformvm" }
avalanche-api = { path = "crates/avalanche-api" }
avm = { path = "crates/avm" }
avalanche-node = { path = "crates/avalanche-node" }
avalanche-crypto = { path = "crates/avalanche-crypto" }
avalanche-trie = { path = "crates/avalanche-trie" }
evm = { path = "crates/evm" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
prost = "0.12"

# Cryptography
sha2 = "0.10"
sha3 = "0.10"
ripemd = "0.1"
bs58 = "0.5"
rustls = "0.22"
tokio-rustls = "0.25"
x509-parser = "0.16"
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
blst = "0.3"
zeroize = { version = "1.7", features = ["derive"] }

# Compression
zstd = "0.13"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
hex = "0.4"
rand = "0.8"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
tokio-stream = "0.1"
lru = "0.12"

# Testing
proptest = "1"
criterion = "0.5"
tokio-test = "0.4"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1

[profile.bench]
lto = "thin"
codegen-units = 4

# Benchmarks
[[bench]]
name = "consensus"
harness = false
path = "benches/consensus.rs"

[[bench]]
name = "network"
harness = false
path = "benches/network.rs"

[[bench]]
name = "database"
harness = false
path = "benches/database.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
sha2 = "0.10"
parking_lot = "0.12"
tokio = { version = "1", features = ["full", "test-util"] }
avalanche-ids = { path = "crates/avalanche-ids" }
