[package]
name = "cargo-update-all-revs"
version = "0.0.3"
edition = "2021"
description = "Cargo plugin to update all versions in a workspace"
license-file = "../LICENSE.md"
homepage = "https://avalabs.org"
readme = "../README.md"
authors = [
     "Ted Yin (@Determinant) <ted@avalabs.org>",
     "Dan Sover (@exdx) <dan.sover@avalabs.org>",
     "Hao Hao (@haohao-os) <hao.hao@avalabs.org>",
     "Gyuho Lee (@gyuho) <gyuho.lee@avalabs.org>",
     "Sam Batschelet (@hexfusion) <sam.batschelet@avalabs.org>",
     "Ron Kuris (@rkuris) <ron.kuris@avalabs.org>",
]

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.5", features = ["derive"] }
serde = { version = "1.0.160", features = ["derive"] }
toml = "0.7.3"
toml_edit = { version = "0.19.8", features = ["serde"] }
